force-app/main/default/objects/Object_Tag__c/Object_Tag__c.object-meta.xml
<CustomObject>
    <description>The object provides information on the tags that are associated with various objects.</description>
    <label>Object Tag</label>
    <nameField>
        <label>Object Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Tags</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>