force-app/main/default/objects/Object_Tag__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field looks up to the Contact that the object tag is for.</description>
    <inlineHelpText>This field looks up to the Contact that the object tag is for.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Tags</relationshipLabel>
    <relationshipName>Contact_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>