force-app/main/default/objects/Object_Tag__c/fields/Contact_Tag_Key__c.field-meta.xml
<CustomField>
    <fullName>Object_Tag_Key__c</fullName>
    <description>This field is a unique key for the Object Tag object which is a combination of Related Object Id, TagId, and RecordType.</description>
    <externalId>true</externalId>
    <label>Object_Tag_Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>