force-app/main/default/objects/Object_Tag__c/fields/CP_Stage__c.field-meta.xml
<CustomField>
    <fullName>CP_Stage__c</fullName>
    <description>[Alteryx/Ed Plus] - This field represents 4 stages of Corporate Partner. For example: CP Verified, CP Eligible, Benefit Ready, Benefit Applied.</description>
    <inlineHelpText>[Alteryx/Ed Plus] - This field represents 4 stages of Corporate Partner. For example: CP Verified, CP Eligible, Benefit Ready, Benefit Applied.</inlineHelpText>
    <label>Corporate Partner Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>verified_image</fullName>
                <label>CP Verified</label>
            </value>
            <value>
                <fullName>CP_Eligible</fullName>
                <label>CP Eligible</label>
            </value>
            <value>
                <fullName>Benefit_Ready</fullName>
                <label>Benefit Ready</label>
            </value>
            <value>
                <fullName>Benefit_Applied</fullName>
                <label>Benefit Applied</label>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>not_eligible</fullName>
                <label>Not Eligible</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>