force-app/main/default/objects/Object_Tag__c/fields/Derived_Name__c.field-meta.xml
<CustomField>
    <fullName>Derived_Name__c</fullName>
    <description>This is a formula field that pulls in the Contact Preferred Full Name OR the Lead's First and Last Name OR the Opportunity Name OR if all those fields are null, then it'll be null.</description>
    <formula>IF(Contact__c != null, Contact__r.Preferred_Full_Name__c, 
    IF(Lead__c != null, Lead__r.FirstName + ' ' + Lead__r.LastName, 
        IF(Opportunity__c != null, Opportunity__r.Name, null)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field that pulls in the Contact Preferred Full Name OR the Lead's First and Last Name OR the Opportunity Name OR if all those fields are null, then it'll be null.</inlineHelpText>
    <label>Derived Name</label>
    <type>Text</type>
</CustomField>