force-app/main/default/objects/Object_Tag__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Date will be updated on the tag creation.</description>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>