force-app/main/default/objects/Object_Tag__c/fields/InEffective_Date__c.field-meta.xml
<CustomField>
    <fullName>InEffective_Date__c</fullName>
    <description>The Ineffective date will be updated on the tag removal on UI.</description>
    <label>InEffective Date</label>
    <type>DateTime</type>
</CustomField>