force-app/main/default/objects/Object_Tag__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if the record is active - can be set thru the UI/LWC or thru an update to the record.</description>
    <inlineHelpText>Denotes if the record is active - can be set thru the UI/LWC or thru an update to the record.</inlineHelpText>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>