force-app/main/default/objects/Object_Tag__c/fields/isVerified__c.field-meta.xml
<CustomField>
    <fullName>isVerified__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>[Alteryx/Ed Plus] - This field denotes whether the object tag is verified or eligible or benefit ready.</description>
    <inlineHelpText>[Alteryx/Ed Plus] - This field denotes whether the object tag is verified or eligible or benefit ready.</inlineHelpText>
    <label>isVerified</label>
    <type>Checkbox</type>
</CustomField>