force-app/main/default/objects/Object_Tag__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Object Tags</relationshipLabel>
    <relationshipName>Object_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>