force-app/main/default/objects/Object_Tag__c/fields/Object_Tag_Key__c.field-meta.xml
<CustomField>
    <fullName>Object_Tag_Key__c</fullName>
    <description>[Apex] - This field is a unique key for the contactTag__c object which is a combination of Related_Object__c, Tag__c, RecordTypeId. There is a trigger that will fire any time the record is updated that will update this field.</description>
    <externalId>true</externalId>
    <inlineHelpText>[Apex] - This field is a unique key for the contactTag__c object which is a combination of Related_Object__c, Tag__c, RecordTypeId. There is a trigger that will fire any time the record is updated that will update this field.</inlineHelpText>
    <label>Object_Tag_Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>