force-app/main/default/objects/Object_Tag__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field looks up to the Opportunity that the object tag is for.</description>
    <inlineHelpText>This field looks up to the Opportunity that the object tag is for.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Object Tags</relationshipLabel>
    <relationshipName>Object_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>