force-app/main/default/objects/Object_Tag__c/fields/Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Id__c</fullName>
    <description>The id of the associated object</description>
    <label>Related Object Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>