force-app/main/default/objects/Object_Tag__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is a Look-up to Tag that the object tag is for.</description>
    <inlineHelpText>This field is a Look-up to Tag that the object tag is for.</inlineHelpText>
    <label>Tag</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>Contact Tags</relationshipLabel>
    <relationshipName>Contact_Tags</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>