force-app/main/default/objects/Object_Tag__c/fields/Tag_Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Tag_Added_Date__c</fullName>
    <description>Date will be updated on the tag creation.</description>
    <label>Tag Added Date</label>
    <type>DateTime</type>
</CustomField>