force-app/main/default/objects/Object_Tag__c/fields/Tag_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>Tag_Removal_Date__c</fullName>
    <description>[Apex] - Code will automatically populate the date that the tag was removed from the UI/LWC or when the IsActive flag went from true to false.</description>
    <inlineHelpText>[Apex] - Code will automatically populate the date that the tag was removed from the UI/LWC or when the IsActive flag went from true to false.</inlineHelpText>
    <label>Tag Removed Date</label>
    <type>DateTime</type>
</CustomField>