force-app/main/default/objects/Object_Tag__c/fields/Tag_Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tag_Removal_Reason__c</fullName>
    <description>[Manual] - When the tag is removed via UI/LWC, the user will be prompted for a reason why the tag is being removed.</description>
    <inlineHelpText>[Manual] - When the tag is removed via UI/LWC, the user will be prompted for a reason why the tag is being removed.</inlineHelpText>
    <label>Tag_Removal_Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does Not Meet Requirements</fullName>
            </value>
            <value>
                <fullName>No Longer With Benefit Employer</fullName>
            </value>
            <value>
                <fullName>Wrong Tag</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
                <isActive>false</isActive>
                <label>No Longer Interested</label>
            </value>
            <value>
                <fullName>No sé por qué estaba presente la etiqueta</fullName>
                <isActive>false</isActive>
                <label>No sé por qué estaba presente la etiqueta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>