force-app/main/default/objects/Object_Tag__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <description>[Alteryx/Ed Plus] - Will denote when the tag being applied is verified though the Corporate Partner.</description>
    <formula>IF(TEXT(CP_Stage__c) == 'verified_image',"/resource/verified_image",
IF(TEXT(CP_Stage__c) == 'not_eligible',"/resource/not_eligible",
IF(TEXT(CP_Stage__c) == 'Incomplete',"/resource/Incomplete",
IF(TEXT(CP_Stage__c) == 'CP_Eligible',"/resource/CP_Eligible",
IF(TEXT(CP_Stage__c) == 'Separated',"/resource/Separated",null)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>[Alteryx/Ed Plus] - Will denote when the tag being applied is verified though the Corporate Partner.</inlineHelpText>
    <label>Verification</label>
    <type>Text</type>
</CustomField>