force-app/main/default/objects/Object_Tag__c/fields/Verified_Image__c.field-meta.xml
<CustomField>
    <fullName>Verified_Image__c</fullName>
    <description>[Alteryx/Ed Plus] - This field denotes the static resource to the image used the verified image on the object tag record within the UI/LWC.</description>
    <inlineHelpText>[Alteryx/Ed Plus] - This field denotes the static resource to the image used the verified image on the object tag record within the UI/LWC.</inlineHelpText>
    <label>Verified_Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>