force-app/main/default/objects/Object_Tag__c/recordTypes/Ed_Plus.recordType-meta.xml
<RecordType>
    <fullName>Ed_Plus</fullName>
    <active>true</active>
    <label>Ed Plus</label>
</RecordType>