force-app/main/default/objects/Object_Tag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Related_Object_Id__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>isActive__c</columns>
    <columns>Tag_Added_Date__c</columns>
    <columns>Tag_Removal_Date__c</columns>
    <columns>Object_Tag_Key__c</columns>
    <columns>Verification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>